--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,12 +21,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:label="@string/title_activity_login" />
         <activity android:name=".confirm" />
         <activity android:name=".choice" />
-        <activity android:name=".Confirm"></activity>
+        <activity android:name=".HomePage" />
+        <activity android:name=".Alerts"></activity>
     </application>
 
 </manifest>
