--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,10 @@
             android:value="@string/google_maps_key" />
 
         <activity android:name=".ChooseClinic" />
-        <activity android:name=".BookingDetails"></activity>
+        <activity android:name=".BookingDetails" />
+        <activity android:name=".BookingComplete" />
+        <activity android:name=".BookingHistory" />
+        <activity android:name=".FAQ"></activity>
     </application>
 
 </manifest>
