--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,7 +48,9 @@
         <activity android:name=".BookingDetails" />
         <activity android:name=".BookingComplete" />
         <activity android:name=".BookingHistory" />
-        <activity android:name=".FAQ"></activity>
+        <activity android:name=".FAQ" />
+        <activity android:name=".MyQueue" />
+        <activity android:name=".MyQueueDetailed"></activity>
     </application>
 
 </manifest>
