--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenLocal()
+        maven { url 'https://maven.google.com'  }
     }
 }
 
