--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,8 +7,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-    <!--<uses-permission android:name="android.permission.SEND_SMS"/>-->
-
+    <!-- <uses-permission android:name="android.permission.SEND_SMS"/> -->
 
     <permission
         android:name="tomorrow.ntu.edu.sg.hospitalbees.permission.MAPS_RECEIVE"
@@ -77,19 +76,19 @@
         <activity
             android:name=".ChooseClinic"
             android:label="Choose Clinic"
-            android:parentActivityName=".HomePage"
-            android:launchMode="singleTop">
+            android:launchMode="singleTop"
+            android:parentActivityName=".HomePage">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomePage" />
         </activity>
         <activity
             android:name=".BookingDetails"
-            android:label="Your Booking Details"/>
+            android:label="Your Booking Details" />
         <activity
             android:name=".BookingComplete"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"
-            android:parentActivityName=".HomePage">
+            android:parentActivityName=".HomePage"
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".HomePage" />
@@ -127,19 +126,18 @@
             android:name="tomorrow.ntu.edu.sg.hospitalbees.default_notification_channel_id"
             android:value="@string/default_notification_channel_id" />
 
-        <service android:name="tomorrow.ntu.edu.sg.hospitalbees.utilities.MyFirebaseMessagingService">
+        <service android:name=".utilities.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
-        <service
-            android:name="tomorrow.ntu.edu.sg.hospitalbees.utilities.MyFirebaseInstanceIDService">
+        <service android:name=".utilities.MyFirebaseInstanceIDService">
             <intent-filter>
-                <action android:name="com.google.firebase.INSTANCE_ID_EVENT"/>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
             </intent-filter>
         </service>
 
+        <activity android:name=".AlertsDetail"></activity>
     </application>
 
 </manifest>
